[project]
name = "distance_based_metrics"
version = "0.1.0"
description = "Python project of the study procedures in 'Distance-Based Metrics of Time-Varying Functional Connectivity'"
authors = [
    {name = "Omar Shafik", email = "o.shafik13@gmail.com"},
]
dependencies = [
    "numpy>=1.24.4",
    "statsmodels>=0.14.1",
    "joblib>=1.3.2",
    "Pillow>=10.2.0",
    "matplotlib>=3.7.4",
    "scipy>=1.9.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
